--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
+    "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   },
